kubernetes/apps/downloads/sabnzbd/sabnzbd-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sabnzbd
  namespace: downloads
  labels:
    app: sabnzbd
spec:
  serviceName: sabnzbd
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: sabnzbd-volume
          persistentVolumeClaim:
            claimName: sabnzbd-volume-pvc
        - name: download-volume
          persistentVolumeClaim:
            claimName: sabnzbd-downloads-pvc
        - name: tmpvol
          emptyDir: {}
      containers:
        - name: sabnzbd
          image: ghcr.io/onedr0p/sabnzbd:3.7.1@sha256:dcb68eda221b59dcce3a2b297f6d1b2228964d83799b24cb001671890e7d7a10
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: sabnzbd-volume
              mountPath: /config
            - name: download-volume
              mountPath: /media/downloads/usenet
            - name: tmpvol
              mountPath: /tmp # needed to download nzbs
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: downloads
  labels:
    app: sabnzbd
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: sabnzbd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: sabnzbd-ingress
  namespace: downloads
spec:
  ingressClassName: nginx-external
  rules:
    - host: media.${DOMAIN_NAME}
      http:
        paths:
          - path: /sabnzbd
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
